@@ -319,12 +319,17 @@ function adminlog($log_type, $data = "")
 
 function gen_score($sid)
 {
+  global $dbtables,$db;
+  global $upgrade_factor;
+  global $upgrade_cost;
+  global $torpedo_price;
+  global $armor_price;
+  global $fighter_price;
   global $ore_price;
   global $organics_price;
   global $goods_price;
   global $energy_price;
-  global $upgrade_cost;
-  global $upgrade_factor;
+  global $colonist_price;
   global $dev_genesis_price;
   global $dev_beacon_price;
   global $dev_emerwarp_price;
@@ -333,70 +338,61 @@ function gen_score($sid)
   global $dev_escapepod_price;
   global $dev_fuelscoop_price;
   global $dev_lssd_price;
-  global $fighter_price;
-  global $torpedo_price;
-  global $armor_price;
-  global $colonist_price;
   global $base_ore;
   global $base_goods;
   global $base_organics;
   global $base_credits;
-  global $db, $dbtables;
 
-  $calc_hull = "ROUND(pow($upgrade_factor,hull))";
-  $calc_engines = "ROUND(pow($upgrade_factor,engines))";
-  $calc_power = "ROUND(pow($upgrade_factor,power))";
-  $calc_computer = "ROUND(pow($upgrade_factor,computer))";
-  $calc_sensors = "ROUND(pow($upgrade_factor,sensors))";
-  $calc_beams = "ROUND(pow($upgrade_factor,beams))";
-  $calc_torp_launchers = "ROUND(pow($upgrade_factor,torp_launchers))";
-  $calc_shields = "ROUND(pow($upgrade_factor,shields))";
-  $calc_armor = "ROUND(pow($upgrade_factor,armor))";
-  $calc_cloak = "ROUND(pow($upgrade_factor,cloak))";
-  $calc_levels = "($calc_hull+$calc_engines+$calc_power+$calc_computer+$calc_sensors+$calc_beams+$calc_torp_launchers+$calc_shields+$calc_armor+$calc_cloak)*$upgrade_cost";
+  $calc_hull              = "ROUND(pow($upgrade_factor,hull))";
+  $calc_engines           = "ROUND(pow($upgrade_factor,engines))";
+  $calc_power             = "ROUND(pow($upgrade_factor,power))";
+  $calc_computer          = "ROUND(pow($upgrade_factor,computer))";
+  $calc_sensors           = "ROUND(pow($upgrade_factor,sensors))";
+  $calc_beams             = "ROUND(pow($upgrade_factor,beams))";
+  $calc_torp_launchers    = "ROUND(pow($upgrade_factor,torp_launchers))";
+  $calc_shields           = "ROUND(pow($upgrade_factor,shields))";
+  $calc_armor             = "ROUND(pow($upgrade_factor,armor))";
+  $calc_cloak             = "ROUND(pow($upgrade_factor,cloak))";
+  $calc_levels            = "($calc_hull+$calc_engines+$calc_power+$calc_computer+$calc_sensors+$calc_beams+$calc_torp_launchers+$calc_shields+$calc_armor+$calc_cloak)*$upgrade_cost";
 
-  $calc_torps = "$dbtables[ships].torps*$torpedo_price";
-  $calc_armor_pts = "armor_pts*$armor_price";
-  $calc_ship_ore = "ship_ore*$ore_price";
-  $calc_ship_organics = "ship_organics*$organics_price";
-  $calc_ship_goods = "ship_goods*$goods_price";
-  $calc_ship_energy = "ship_energy*$energy_price";
-  $calc_ship_colonists = "ship_colonists*$colonist_price";
-  $calc_ship_fighters = "ship_fighters*$fighter_price";
-  $calc_equip = "$calc_torps+$calc_armor_pts+$calc_ship_ore+$calc_ship_organics+$calc_ship_goods+$calc_ship_energy+$calc_ship_colonists+$calc_ship_fighters";
+  $calc_torps             = "$dbtables[ships].torps*$torpedo_price";
+  $calc_armor_pts         = "armor_pts*$armor_price";
+  $calc_ship_ore          = "ship_ore*$ore_price";
+  $calc_ship_organics     = "ship_organics*$organics_price";
+  $calc_ship_goods        = "ship_goods*$goods_price";
+  $calc_ship_energy       = "ship_energy*$energy_price";
+  $calc_ship_colonists    = "ship_colonists*$colonist_price";
+  $calc_ship_fighters     = "ship_fighters*$fighter_price";
+  $calc_equip             = "$calc_torps+$calc_armor_pts+$calc_ship_ore+$calc_ship_organics+$calc_ship_goods+$calc_ship_energy+$calc_ship_colonists+$calc_ship_fighters";
 
-  $calc_dev_warpedit = "dev_warpedit*$dev_warpedit_price";
-  $calc_dev_genesis = "dev_genesis*$dev_genesis_price";
-  $calc_dev_beacon = "dev_beacon*$dev_beacon_price";
-  $calc_dev_emerwarp = "dev_emerwarp*$dev_emerwarp_price";
-  $calc_dev_escapepod = "IF(dev_escapepod='Y', $dev_escapepod_price, 0)";
-  $calc_dev_fuelscoop = "IF(dev_fuelscoop='Y', $dev_fuelscoop_price, 0)";
-  $calc_dev_lssd = "IF(dev_lssd='Y', $dev_lssd_price, 0)";
+  $calc_dev_warpedit      = "dev_warpedit*$dev_warpedit_price";
+  $calc_dev_genesis       = "dev_genesis*$dev_genesis_price";
+  $calc_dev_beacon        = "dev_beacon*$dev_beacon_price";
+  $calc_dev_emerwarp      = "dev_emerwarp*$dev_emerwarp_price";
+  $calc_dev_escapepod     = "IF(dev_escapepod='Y', $dev_escapepod_price, 0)";
+  $calc_dev_fuelscoop     = "IF(dev_fuelscoop='Y', $dev_fuelscoop_price, 0)";
+  $calc_dev_lssd          = "IF(dev_lssd='Y', $dev_lssd_price, 0)";
   $calc_dev_minedeflector = "dev_minedeflector*$dev_minedeflector_price";
-  $calc_dev = "$calc_dev_warpedit+$calc_dev_genesis+$calc_dev_beacon+$calc_dev_emerwarp+$calc_dev_escapepod+$calc_dev_fuelscoop+$calc_dev_minedeflector+$calc_dev_lssd";
+  $calc_dev               = "$calc_dev_warpedit+$calc_dev_genesis+$calc_dev_beacon+$calc_dev_emerwarp+$calc_dev_escapepod+$calc_dev_fuelscoop+$calc_dev_minedeflector+$calc_dev_lssd";
 
-  $calc_planet_goods = "if(bnt_planets.planet_id,SUM($dbtables[planets].organics)*$organics_price+SUM($dbtables[planets].ore)*$ore_price+SUM($dbtables[planets].goods)*$goods_price+SUM($dbtables[planets].energy)*$energy_price";
-  $calc_planet_colonists = "SUM($dbtables[planets].colonists)*$colonist_price";
-  $calc_planet_defence = "SUM($dbtables[planets].fighters)*$fighter_price+IF($dbtables[planets].base='Y', $base_credits+SUM($dbtables[planets].torps)*$torpedo_price, 0)";
-  $calc_planet_credits = "SUM($dbtables[planets].credits),0)";
+  $calc_planet_goods      = "SUM($dbtables[planets].organics)*$organics_price+SUM($dbtables[planets].ore)*$ore_price+SUM($dbtables[planets].goods)*$goods_price+SUM($dbtables[planets].energy)*$energy_price";
+  $calc_planet_colonists  = "SUM($dbtables[planets].colonists)*$colonist_price";
+  $calc_planet_defence    = "SUM($dbtables[planets].fighters)*$fighter_price+IF($dbtables[planets].base='Y', $base_credits+SUM($dbtables[planets].torps)*$torpedo_price, 0)";
+  $calc_planet_credits    = "SUM($dbtables[planets].credits)";
 
   $res = $db->Execute("SELECT $calc_levels+$calc_equip+$calc_dev+$dbtables[ships].credits+$calc_planet_goods+$calc_planet_colonists+$calc_planet_defence+$calc_planet_credits AS score FROM $dbtables[ships] LEFT JOIN $dbtables[planets] ON $dbtables[planets].owner=ship_id WHERE ship_id=$sid AND ship_destroyed='N'");
-  //$debugstring = $db->ErrorMsg();
   $row = $res->fields;
-  $score = $row['score'];
+  $score = $row[score];
   $res = $db->Execute("SELECT balance, loan FROM $dbtables[ibank_accounts] where ship_id = $sid");
-  //$debugstring .= $db->ErrorMsg();
   if($res)
   {
      $row = $res->fields;
-     $score += ($row['balance'] - $row['loan']);
+     $score += ($row[balance] - $row[loan]);
   }
+  if($score<0) $score=0;
   $score = ROUND(SQRT($score));
-
   $db->Execute("UPDATE $dbtables[ships] SET score=$score WHERE ship_id=$sid");
-  //$debugstring = $db->ErrorMsg();
-  //for debugging  return teh query so it can be tested
- // $score .=" SELECT $calc_levels+$calc_equip+$calc_dev+$dbtables[ships].credits+$calc_planet_goods+$calc_planet_colonists+$calc_planet_defence+$calc_planet_credits AS score FROM $dbtables[ships] LEFT JOIN $dbtables[planets] ON $dbtables[planets].owner=ship_id WHERE ship_id=$sid AND ship_destroyed='N' ".$debugstring;
+
   return $score;
 }
 
